# pdf_tutor

./: .gitignore  LICENSE  pyproject.toml
src/: __init__.py  openai_request.py  pdf_operations.py  prompts.py  router.py  schema.py  server.py
src/Admin/: __init__.py
src/User/: __init__.py  router.py
src/embedding_maker/: __init__.py  pdf_operations.py  qdrant_storage.py
