[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
description = "a simple ai chat bot for reading pdf and answering questions"
authors = [{ name = "yashsehgal9253@gmail.com", email = "yashsehgal9253@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
version = "0.1.0"

[project.scripts]
pdf_tutor = "src.server:run_wsgi"
